# reactor-twin

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup_and_commit.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml  release.yml
benchmarks/: bench_digital_twin.py
benchmarks/real_data/: __init__.py  penicillin.py  williams_otto.py
deploy/helm/reactor-twin/: Chart.yaml  values.yaml
deploy/helm/reactor-twin/templates/: deployment.yaml  hpa.yaml  ingress.yaml
docs/: index.md
docs/api/: core.md  digital-twin.md  physics.md  reactors.md  training.md  utils.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: constraints.md  deployment.md  digital-twin.md  kinetics.md  neural-des.md  reactors.md
docs/tutorials/: 01_getting_started.md  02_physics_constraints.md  03_advanced_neural_des.md  04_digital_twin.md  05_custom_extensions.md
examples/: 00_quickstart.py  01_cstr_exothermic.py  02_cstr_van_de_vusse.py  03_batch_consecutive.py  04_batch_parameter_estimation.py  05_pfr_tubular.py  06_bifurcation_analysis.py  07_hard_vs_soft_constraints.py  08_latent_neural_ode.py  09_neural_sde_uncertainty.py  10_meta_learning_adaptation.py  11_state_estimation_ekf.py  12_fault_detection.py  13_mpc_control.py  14_multi_objective_optimization.py
notebooks/: 01_getting_started.ipynb  02_physics_constraints.ipynb  03_advanced_neural_des.ipynb  04_digital_twin.ipynb  05_custom_extensions.ipynb
paper/: main.tex  references.bib
results/: paper_results.json
scripts/: ablation_constraints.py  benchmark_vs_competitors.py  experiments_paper.py  fuzz_ode_solvers.py  generate_figures.py  loadtest.py  run_convergence_only.py  run_relu_ablation.py
src/reactor_twin/: __init__.py  cli.py  exceptions.py
src/reactor_twin/api/: __init__.py  auth.py  metrics.py  server.py  websocket.py
src/reactor_twin/core/: __init__.py  augmented_neural_ode.py  base.py  bayesian_neural_ode.py  hybrid_model.py  latent_neural_ode.py  neural_cde.py  neural_ode.py  neural_sde.py  ode_func.py
src/reactor_twin/dashboard/: __init__.py  app.py
src/reactor_twin/dashboard/pages/: 01_reactor_sim.py  02_phase_portrait.py  03_bifurcation.py  04_rtd_analysis.py  05_parameter_sweep.py  06_sensitivity.py  07_pareto.py  (+3 more)
src/reactor_twin/deploy/: __init__.py  sagemaker.py
src/reactor_twin/digital_twin/: __init__.py  fault_detector.py  meta_learner.py  mpc_controller.py  online_adapter.py  state_estimator.py
src/reactor_twin/discovery/: __init__.py  symbolic_regression.py
src/reactor_twin/export/: __init__.py  onnx_export.py
src/reactor_twin/physics/: __init__.py  constraints.py  energy_balance.py  generic.py  mass_balance.py  port_hamiltonian.py  positivity.py  stoichiometry.py  thermodynamics.py
src/reactor_twin/reactors/: __init__.py  base.py  batch.py  cstr.py  fluidized_bed.py  membrane.py  multi_phase.py  pfr.py  population_balance.py  semi_batch.py
src/reactor_twin/training/: __init__.py  data_generator.py  distributed.py  foundation.py  losses.py  trainer.py
src/reactor_twin/utils/: __init__.py  config.py  constants.py  logging.py  metrics.py  model_registry.py  numerical.py  registry.py  sensitivity.py  visualization.py
tests/: conftest.py  test_advanced_mpc.py  test_api.py  test_auth.py  test_bayesian_neural_ode.py  test_benchmarks.py  test_cli.py  test_config.py  test_core.py  test_coverage_gaps.py  test_dashboard.py  test_digital_twin.py  test_discovery.py  test_discovery_no_pysr.py  test_distributed.py  test_exceptions.py  test_export.py  test_fluidized_bed.py  test_foundation.py  test_hybrid_model.py  test_integration.py  test_kinetics.py  test_logging.py  test_membrane.py  test_meta_learner.py  test_metrics.py  test_model_registry.py  test_multi_phase.py  test_neural_cde.py  test_neural_sde.py  test_numerical.py  test_online_adapter.py  test_physics.py  test_population_balance.py  test_reactors.py  test_sagemaker.py  test_sensitivity.py  test_systems.py  test_training.py  test_utils.py  (+1 more)
(+14 files in other folders)
